<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarDatos"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tituloScreen2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titScreen"
        android:layout_marginTop="@dimen/margen"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/vNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/defaul"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/vFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/defaul"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/vTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/defaul"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/vEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/defaul"
        android:textSize="20sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/vDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/defaul"
        android:textSize="20sp"
        android:visibility="visible"/>
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/editar_datos"/>

</LinearLayout>